feat: update assist-trust theme and custom plugin

--- a/wp-content/themes/assist-trust/reset.css
+++ b/wp-content/themes/assist-trust/reset.css
@@ -1,7 +1,7 @@
 *,
 *::before,
 *::after {
-  box-sizing: border-box;
+  box-sizing: border-box !important;
 }
 
 /* Remove default padding */
@@ -46,9 +46,11 @@ ol[class] {
   list-style: none;
 }
 
-/* A elements that don't have a class get default styles */
-a:not([class]) {
-  text-decoration-skip-ink: auto;
+/* Have link and buttons be indistinguishable */
+a,
+button {
+  all: unset;
+  cursor: pointer;
 }
 
 /* Make images easier to work with */
@@ -77,6 +79,14 @@ h4,
 h5,
 h6 {
   font: inherit;
+}
+
+[hidden] {
+  display: none;
+}
+
+[inert] {
+  opacity: 0.25;
 }
 
 /* Remove all animations and transitions for people that prefer not to see them */
