--- a/wp-content/themes/assist-trust/style.css
+++ b/wp-content/themes/assist-trust/style.css
@@ -63,24 +63,37 @@ blockquote footer {
   }
 }
 
+/* animate underline */
+
 .link__animated,
 .link__animated-inner > span,
 #menu-footer a {
   position: relative;
-  background-image: linear-gradient(currentColor, currentColor);
-  background-position: 0% 100%;
-  background-repeat: no-repeat;
-  background-size: 0% 2px;
-  transition: background-size .5s;
 }
 
-.link__animated:hover,
-.link__animated:focus,
-.link__animated-inner:hover > span,
-.link__animated-inner:focus > span,
-#menu-footer a:hover,
-#menu-footer a:focus {
-  background-size: 100% 2px;
+.link__animated:before,
+.link__animated-inner > span:before,
+#menu-footer a:before {
+  content: '';
+  position: absolute;
+  width: 100%;
+  height: 2px;
+  bottom: 0;
+  left: 0;
+  background-color: currentColor;
+  visibility: hidden;
+  transform: scaleX(0);
+  transition: all 0.2s ease-in-out 0s;
+}
+
+.link__animated:hover:before,
+.link__animated:focus:before,
+.link__animated-inner:hover > span:before,
+.link__animated-inner:focus > span:before,
+#menu-footer a:hover:before,
+#menu-footer a:focus:before {
+  visibility: visible;
+  transform: scaleX(1);
 }
 
 /* helpers */
@@ -462,9 +475,6 @@ blockquote footer {
 #menu-main .sub-menu--list .ungrouped {
   -ms-grid-column: 1;
   grid-column: 1;
-  /* -ms-grid-row: 1; */
-  /* -ms-grid-row-span: 999; */
-  /* grid-row: 1 / 1000; */
 }
 
 @media (min-width: 576px) { /* small devices */
