fix: push the footer to the bottom of the screen

--- a/wp-content/themes/assist-trust/style.css
+++ b/wp-content/themes/assist-trust/style.css
@@ -12,6 +12,8 @@
 }
 
 body {
+  display: flex;
+  flex-direction: column;
   color: #004279;
   font-family: 'Roboto', sans-serif;
   min-width: 320px;
@@ -362,6 +364,7 @@ blockquote footer {
 /* footer */
 
 .page-footer {
+  margin-top: auto;
   color: #fff;
   background-color: #004279;
 }
