--- a/wp-content/themes/assist-trust/reset.css
+++ b/wp-content/themes/assist-trust/reset.css
@@ -29,13 +29,13 @@ dd {
 }
 
 :root {
-  min-height: 100%;
+  height: 100%;
   scroll-behavior: smooth;
 }
 
 /* Set core body defaults */
 body {
-  min-height: 100%;
+  height: 100%;
   scroll-behavior: smooth;
   text-rendering: optimizeSpeed;
   line-height: 1.5;
