--- a/wp-content/themes/assist-trust/style.css
+++ b/wp-content/themes/assist-trust/style.css
@@ -260,17 +260,15 @@ blockquote footer {
 }
 
 .slider ul {
+  display: flex;
   margin: 0 auto;
   padding: 0;
   background-color: rgba(0, 0, 0, .5);
-
-  display: flex;
 }
 
 .slider li {
-  list-style: none;
-
   flex: 0 0 100%;
+  list-style: none;
 }
 
 .slider figure {
@@ -342,9 +340,13 @@ blockquote footer {
   width: 1rem;
   border-radius: 50%;
   background-color: #fff;
+  transition: all .2s ease-in-out;
 }
 
-.slider--nav li:hover button,
+.slider--nav li:not(.active):hover button {
+  transform: scale(1.3);
+}
+
 .slider--nav li.active button {
   background-color: #d70c8c;
 }
