--- a/wp-content/themes/assist-trust/style.css
+++ b/wp-content/themes/assist-trust/style.css
@@ -22,6 +22,7 @@ body {
 *:focus {
   outline: 1px dashed currentColor;
   outline-offset: 5px;
+  transition: outline-offset .2s ease-in-out;
 }
 
 a {
