--- a/wp-content/themes/assist-trust/style.css
+++ b/wp-content/themes/assist-trust/style.css
@@ -794,3 +794,91 @@ blockquote footer {
   padding: 1rem;
   padding-top: 0;
 }
+
+/* timeline page (page-timeline.php) */
+
+.timeline > * ~ * .timeline--entry {
+  padding-top: 2rem;
+}
+
+.timeline img {
+  max-width: 200px;
+}
+
+.timeline--image {
+  position: relative;
+}
+
+.timeline--image:after {
+  content: '';
+  position: absolute;
+  bottom: 0;
+  left: -3rem;
+  height: 4px;
+  width: 2rem;
+  background-color: #d70c8c;
+}
+
+.timeline--entry {
+  position: relative;
+  display: flex;
+  flex-direction: column;
+  padding-left: 3rem;
+  max-width: 35ch;
+}
+
+.timeline--entry h2 {
+  color: #d70c8c;
+  font-size: 1.5rem;
+  font-weight: bold;
+}
+
+.timeline > *:nth-child(odd) .timeline--entry {
+  border-left: 4px solid #d70c8c;
+}
+
+.timeline > *:nth-child(even) .timeline--entry {
+  align-items: flex-start;
+  text-align: left;
+  border-left: 4px solid #d70c8c;
+}
+
+.timeline--entry > * + * {
+  margin-top: .5rem;
+}
+
+@media (min-width: 576px) { /* small devices */
+  .timeline > * ~ * .timeline--entry {
+    padding-top: 0;
+  }
+
+  .timeline--entry {
+    align-items: flex-end;
+    text-align: right;
+  }
+
+  .timeline--image:after {
+    left: auto;
+    right: -3rem;
+  }
+
+  .timeline > *:nth-child(odd) .timeline--entry {
+    right: calc(-1rem + 2px);
+    padding-right: 3rem;
+    border-left: none;
+    border-right: 4px solid #d70c8c;
+    margin-left: auto;
+    padding-left: 0;
+  }
+
+  .timeline > *:nth-child(even) .timeline--entry {
+    left: calc(-1rem + 2px);
+    margin-top: 4rem;
+    padding-top: 0;
+  }
+
+  .timeline > *:nth-child(even) .timeline--image:after {
+    right: auto;
+    left: -3rem;
+  }
+}
