--- a/wp-content/themes/assist-trust/reset.css
+++ b/wp-content/themes/assist-trust/reset.css
@@ -41,20 +41,17 @@ body {
   line-height: 1.5;
 }
 
-/* Remove list styles on ul, ol elements with a class attribute */
-ul[class],
-ol[class] {
+/* Remove list styles on ul, ol elements */
+ul,
+ol {
   list-style: none;
 }
 
 /* Have link and buttons be indistinguishable */
 a,
 button {
-  /* IE */
   border: none;
   background: none;
-
-  all: unset;
   cursor: pointer;
 }
 
