--- a/wp-content/themes/assist-trust/style.css
+++ b/wp-content/themes/assist-trust/style.css
@@ -567,6 +567,7 @@ blockquote footer {
 
 @media (min-width: 576px) { /* small devices */
   #menu-main-container {
+    box-shadow: 0 2px 10px #e2e6f0;
     background-color: #fff;
     top: 20px;
     z-index: 1;
