--- a/wp-content/themes/assist-trust/style.css
+++ b/wp-content/themes/assist-trust/style.css
@@ -38,7 +38,7 @@ h1 {
 
 /* details/summary */
 
-details {
+body.supports-details-el details {
   background-color: #e2e6f0;
 }
 
@@ -47,6 +47,9 @@ summary {
   align-items: center;
   cursor: pointer;
   font-weight: bold;
+}
+
+body.supports-details-el summary {
   padding: 1rem;
 }
 
@@ -54,7 +57,7 @@ summary:focus {
   outline-offset: 0;
 }
 
-summary:after {
+body.supports-details-el summary:after {
   content: '';
   display: block;
   height: 1.5em;
@@ -66,13 +69,13 @@ summary:after {
   transition: transform 0.2s ease-in-out 0s;
 }
 
-summary::-webkit-details-marker,
-summary:focus::-webkit-details-marker {
+body.supports-details-el summary::-webkit-details-marker,
+body.supports-details-el summary:focus::-webkit-details-marker {
   background: none;
   color: transparent;
 }
 
-details[open] summary:after {
+body.supports-details-el details[open] summary:after {
   transform: rotate(45deg);
 }
 
